# HELICS-Use-Cases

./: .buildinfo  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ANL-TD-Iterative-Pflow/: InstallHELICS.html  InstallHELICS.md  InstallPETSc.html  README.md  helics-broker.c  index.html  makefile  makemetadatafile.m  metadata1  petscopt  pflow-helics-dist.c  pflow-helics-trans.c  runtdpflow.ipynb
ANL-TD-Iterative-Pflow/.ipynb_checkpoints/: runtdpflow-checkpoint.ipynb
ANL-TD-Iterative-Pflow/datafiles/: case_ACTIVSg200.m
ANL-TD-Iterative-Pflow/include/: opendss.h  pflow.h
ANL-TD-Iterative-Pflow/lib/: libopendssc.dylib  libpflow.dylib
ANL_adaptive_volt_var/: README.md  index.html  makefile  petscopt
ANL_adaptive_volt_var/data/: IEEE13_solar.glm  loadMap.json  monitorMap.json  multiperiod_dcopf_res.json  schema_case9.json  schemaopt_get  schemaopt_set  solar_diffusion_map.csv
ANL_adaptive_volt_var/include/: pflow.h
ANL_adaptive_volt_var/mods/: cmdarg.c  exec.c  globals.c  globals.h  server.c
ANL_adaptive_volt_var/src/: adaptive_volt_var.py  catchException.py  pflowDriver.c  pygld.py  pygld_worker.py
PNNL-Real-Time-Transactive-Energy/: .gitignore  README.md  index.html
PNNL-Real-Time-Transactive-Energy/api_calls/: commercialLoads.html  controlConfiguration.html  index.html  (+8 more)
PNNL-Real-Time-Transactive-Energy/modelDependency/helicsLauncher/: CMakeLists.txt  helicsWrapperMPI.sh  helics_launcher.cpp
PNNL-Real-Time-Transactive-Energy/modelDependency/realTimeTransactiveEnergy/helics/dso/: CMakeLists.txt  dso.cpp  dso.hpp  logging.hpp
PNNL-Real-Time-Transactive-Energy/modelDependency/realTimeTransactiveEnergy/helics/lse/: CMakeLists.txt  logging.hpp  lse.cpp  lse.hpp
PNNL-TD-Dynamic-Load/: README.md  index.html
PNNL-Wide-Area-Control/: README.md  build-fed.sh  build-ns3.sh  fed.cc  index.html  ns3-sndrcv.cc
_sources/: index.md.txt
docs/: Makefile
(+162 files in other folders)
